instructions.txt
The only file to be modified is process.py 



kdog@kdogsputer:~/pythonprojects/process_transcript$ python run.py
Traceback (most recent call last):
  File "/home/kdog/pythonprojects/process_transcript/run.py", line 6, in <module>
    from process import ParseFile
  File "/home/kdog/pythonprojects/process_transcript/process.py", line 70
    raise    def process(self):
             ^^^
SyntaxError: invalid syntax
kdog@kdogsputer:~/pythonprojects/process_transcript$ 




This is the algorithm to be implementted and if you examine the code in process.py you see it allmost 
implements the algorithm, but the end condition is not being implemented correctly and 
code does not terminate and goes into an endless loop.

All input words must be transferred through the chunk operation to the output


Consider a 1000 word document.

Always add a terminating space when appending a word to the output.

As words define chunk size, all file operations will read and write entire words. This will require class methods to accomplish file operations, and these methods must handle the end of the input file correctly to ensure proper completion.

Specifically, when reading words from the input file, if the requested number of words extends beyond the end of the file, the read 
operation should return only the remaining words available until the end of the file. If no words are available, it should 
return an empty set of words. Similarly, when writing words to the output file, the operation should only write the words actually 
provided, irrespective of any pre-calculated chunk sizes that might exceed the available words. This robust handling of file boundaries 
will ensure that the algorithm processes the entire input document accurately and completes without errors, even when dealing with 
the last chunks that may be smaller than the defined chunk size.

format is a function

pointer1 = 0
pointer2 = 0

read the first 250 word chunk1 from the input file

pointer1 = 250

format chunk1 

copy the first 150 words in chunk1 to the output file

pointer2 = 150

copy the remaining 100 words in chunk1 into the beginning of chunk 2, and fill the rest of chunk 2 
with 150 words from the input file from pointer1

pointer1 = 400

format chunk2

append the first 150 words in chunk2 to the output file

pointer2 = 300

copy the remaining 100 words in chunk2 into the beginning of chunk 3, and fill the rest of chunk 3 
with 150 words from the input file from pointer1

pointer1 = 550

format chunk3

append the first 150 words in chunk3 to the output file

pointer2 = 450

copy the remaining 100 words in chunk3 into the beginning of chunk 4, and fill the rest of chunk 4 
with 150 words from the input file from pointer1

pointer1 = 700

format chunk4

append the first 150 words in chunk4 to the output file

pointer2 = 600

copy the remaining 100 words in chunk4 into the beginning of chunk 5, and fill the rest of chunk 5 
with 150 words from the input file from pointer1

pointer1 = 850

format chunk5

append the first 150 words in chunk5 to the output file

pointer2 = 750

copy the remaining 100 words in chunk5 into the beginning of chunk 6, and fill the rest of chunk 6 
with 150 words from the input file from pointer1

pointer1 = 1000

format chunk6

append the first 150 words in chunk6 to the output file

pointer2 = 900

copy the remaining 100 words in chunk6 into the beginning of chunk 7, and fill the rest of chunk 7 
with 150 words from the input file from pointer1

pointer1 = 1150 <- over file size

format chunk7

append the first 150 words in chunk7 to the output file

pointer2 = 1050  <- over file size to indicate end of algorithm







